# Phishnet

./: .env.example  .gitignore  .renderignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  EXPLAIN_ARCHITECTURE.md  GITHUB_UPLOAD_INSTRUCTIONS.md  GITHUB_UPLOAD_SUCCESS.md  LICENSE  Makefile  OAUTH_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READY_CHECKLIST.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_REORGANIZATION_COMPLETE.md  QUICK_DEPLOY_COMMANDS.md  README.md  SCALABILITY_FEATURES.md  UPLOAD_SUCCESS.md  VERCEL_AUTHENTICATION_GUIDE.md  VERCEL_FIX.md  alembic.ini  callback_analyzer.py  check_deployment_ready.py  check_health.py  check_settings.py  check_target_user.py  debug_routers.py  docker-compose.yml  oauth_config_fixer.py  oauth_diagnosis.py  oauth_test_enhanced.py  oauth_test_simple.py  package-lock.json  package.json  phishnet-cli.py  pytest.ini  quick_test.bat  render.yaml  (+11 more)
backend/: .env.example  .env.mode1.dev.example  .env.mode1.example  .env.mode1.prod.example  .env.production  CONFIGURATION_UPDATE.md  DEPLOYMENT.md  FORCE_DEPLOY.py  IMAP_QUICK_START.md  IMAP_REFERENCE.md  PRIORITY_4_IMPLEMENTATION_SUMMARY.md  PRIORITY_5_COMPLETE.md  REAL_EMAIL_SETUP.md  RENDER_DEPLOYMENT.md  check_endpoints.py  check_mongodb.py  cleanup_mongodb.py  conftest.py  debug_import.py  debug_import_local.py  debug_output.txt  debug_router.py  final_check_v2.txt  final_check_v3.txt  final_import_check.txt  gmail_validation_report.json  import_error.txt  inspect_collection.py  main.py  manage_indexes.py  migrate_to_production.py  ondemand_error.txt  production_main.py  pyproject.toml  pytest.ini  render.yaml  requirements-production.txt  requirements-test.txt  requirements.txt  routes_errors.txt  (+21 more)
backend/alembic/: env.py
backend/app/: enhanced_main.py  main.py  ws_endpoints.py
backend/deployment/: Dockerfile  README.md  docker-compose.yml
backend/docs/: MODE1_INFRASTRUCTURE_SETUP.md  MODE_COMPARISON.md
backend/scripts/: analyze_playbooks.py  check_inbox_now.py  create_indexes.py  debug_poller.py  deploy.ps1  deploy_production.sh  diagnose_email_workflow.py  enable_imap.py  perf_results.txt  repair_env.py  run_simple_email_tests.py  run_testing_suite.py  test_adversarial_performance.py  test_components.py  verify_locks.py  verify_routers.py
backend/tests/: conftest.py  test_acceptance_datasets.py  test_analytics_dashboard.py  test_auth.py  test_basic.py  test_caching.py  test_canonical_entrypoint.py  test_correct_url.py  test_dashboard_simple.py  (+24 more)
(+1006 files in other folders)
